<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plantNameIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/plantName"
                android:textSize="16sp" />



            <EditText
                android:id="@+id/plantName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:hint="@string/name"
                app:layout_constraintTop_toTopOf="parent" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/planttwoIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="16sp"
                android:hint="@string/plantName" />



            <EditText
                android:id="@+id/plantName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:hint="@string/name"
                app:layout_constraintTop_toTopOf="parent" />




        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/plantThreeIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="Relationship" />



            <EditText
                android:id="@+id/TypeOfRelationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:textSize="16sp"
                android:hint="@string/name"
                app:layout_constraintTop_toTopOf="parent" />



        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/plantFourIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/description1" />



            <EditText
                android:id="@+id/descriptionSymbiosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:hint="@string/name"
                app:layout_constraintTop_toTopOf="parent" />




        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="Update" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="Delete" />





        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="411dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/todo">

        </ImageView>


    </LinearLayout>


</androidx.cardview.widget.CardView>
